Update config, repo, svce and objects utility;\n Using unmodifiable liste; \n Use only one ApplicationRunner instance in the config class